--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,6 +2,7 @@ maximum_name_length: 20
 maximum_email_length: 50
 minimum_password_length: 6
 remember_me_check: "1"
+paginate_per_page: 10
 admin:
   email: nhs3108@gmail.com
 signup_page:
