--- a/config/settings.yml
+++ b/config/settings.yml
@@ -58,9 +58,6 @@ answer:
 word:
   word:
     is_presence: true
-search_form:
-  blank: ""
-  select_category: "Please select the category"
 fileType_to_import_words: csv
 lesson:
   question_limit_words: 5
@@ -76,3 +73,7 @@ activities:
 unit:
   minute: "m"
   second: "s"
+filter:
+  Learned: learned
+  Not_learned: not_learned
+  All: get_all
