Finish show lesson

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -68,7 +68,7 @@ lesson:
 question:
   add_index: 1
 activities:
-  folowed: followed
+  followed: followed
   unfollowed: unfollowed
   learned: learned
   a_lesson_in: a lesson in
